# streamy-stats

dummy-web-api/: .gitignore  main.py  pyproject.toml
web-app/: index.html  package-lock.json  package.json
web-app/src/: App.css  App.tsx  main.tsx  widgetGenerator.tsx
web-app/src/components/: DragArea.tsx  Widget.tsx
